--- a/CostumeTest/Pages/Index.cshtml
+++ b/CostumeTest/Pages/Index.cshtml
@@ -23,7 +23,7 @@
     @(await Html.RenderComponentAsync<Message>(RenderMode.ServerPrerendered))
 
     <script src="_framework/blazor.server.js"></script>
-    <script src="js/button.js"></script>
+    <script src="~/js/site.js"></script>
   
 
 </body>
