--- a/ReservationAdmin/Component/Message.razor
+++ b/ReservationAdmin/Component/Message.razor
@@ -22,7 +22,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">niet ingevuld of gekozen</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Niet ingevuld of gekozen</h5>
             </div>
             <div class="modal-body">
                 <p>
@@ -35,7 +35,6 @@
         </div>
     </div>
 </div>
-
 <!-- Modal niet Email correct  -->
 <div class="modal fade" id="EmailNotMessage" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -54,7 +53,7 @@
         </div>
     </div>
 </div>
-<!-- Modal niet Email correct  -->
+<!-- Modal reservering aangemaakt  -->
 <div class="modal fade" id="ReservationSucces" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -63,7 +62,7 @@
             </div>
             <div class="modal-body">
                 <p>
-                    Reservering is aangemaakt
+                    Reservering is aangemaakt.Een mail wordt verzonden om je reservering te bevestigen
                 </p>
             </div>
             <div class="modal-footer">
@@ -72,3 +71,4 @@
         </div>
     </div>
 </div>
+
