--- a/ReservationAdmin/Pages/Index.cshtml
+++ b/ReservationAdmin/Pages/Index.cshtml
@@ -8,13 +8,14 @@
     ViewData["Title"] = "Home page";
 }
 <div style=" float:left; height:100vh;  width: 100%; background-color:#43425D;">
-    <div style=" width: 31%; margin-left: 32%; margin-top: 15%;">
-        <h2>Login - Reserveringsystem</h2>
+    <div style=" width: 31%; margin-left: 35%; margin-top: 15%;">
+        <h2 style="    color: #fff;
+    font-weight: 100;">Login - Reserveringsystem</h2>
         <form  method="post">
             <div class="form-inline  form-group">
-                <label for="InputAmount"> Wachtwoord</label>
+                <label for="InputAmount" style=" color: #fff;"> Wachtwoord</label>
                 <input type="text" name="password" class=" form-control" required />
-                <button type="submit" class="btn btn-primary" style=" margin-top: 12%; margin-right: 4%; margin-left: 60%;">
+                <button type="submit" class="btn btn-primary" style=" margin-top: 12%;margin-right: 4%;background-color: #D5DAD7;margin-left: 60%;color: #000000;">
                     inloggen
                 </button>
             </div>
