--- a/CostumeTest/Components/Message.razor
+++ b/CostumeTest/Components/Message.razor
@@ -22,7 +22,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">niet ingevuld of gekozen</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Niet ingevuld of gekozen</h5>
             </div>
             <div class="modal-body">
                 <p>
@@ -54,7 +54,8 @@
         </div>
     </div>
 </div>
-<!-- Modal niet Email correct  -->
+
+<!-- Modal Reservering  -->
 <div class="modal fade" id="ReservationSucces" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -63,7 +64,7 @@
             </div>
             <div class="modal-body">
                 <p>
-                    Reservering is aangemaakt
+                    Reservering is aangemaakt.Een mail wordt verzonden om je reservering te bevestigen
                 </p>
             </div>
             <div class="modal-footer">
