--- a/CostumeTest/Pages/Shared/_Layout.cshtml
+++ b/CostumeTest/Pages/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color:#545871;">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index" style="color:white;">Restuarant reservering</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index" style="color:white;">Restaurant reservering</a>
             </div>
         </nav>
     </header>
