--- a/ReservationAdmin/Component/GetMonthReservation.razor
+++ b/ReservationAdmin/Component/GetMonthReservation.razor
@@ -11,15 +11,18 @@
 @using ChartJs.Blazor.ChartJS.Common.Wrappers
 @using ChartJs.Blazor.Charts
 @using ChartJs.Blazor.Util
+
 @using System.Linq;
 
+@using Microsoft.JSInterop;
+@inject IJSRuntime JsRuntime;
 
 <select @onchange="(e => GetChoose(e))">
     <option value="Year">Jaar</option>
     <option value="Month">Maand</option>
 </select>
 
-<select @onchange="(e => GetChooseWhichMonth(e))" class="CHidden">
+<select @onchange="(e => GetChooseWhichMonth(e))" class="SelectorMonth CHidden">
     <option value="01">Jan</option>
     <option value="02">Feb</option>
     <option value="03">Maart</option>
@@ -34,6 +37,7 @@
     <option value="12">Nov</option>
 
 </select>
+
 <select @onchange="(e => GetWhichYear(e))">
     <option value="2020">2020</option>
     <option value="2019">2019</option>
@@ -68,12 +72,14 @@
     public int FifthYear = DateTime.Now.Year - 5;
     public int year = DateTime.Now.Year;
 
+    //De grafiek wordt neergezet
     protected override void OnInitialized()
     {
         SetBarChart();
         GetFutureYear();
     }
 
+    //informatie over de grafiek 
     public void SetBarChart()
     {
         _barChartConfig = new BarConfig
@@ -89,7 +95,7 @@
                 Scales = new BarScales
                 {
                     XAxes = new List<CartesianAxis>
-                    {
+            {
                     new BarCategoryAxis
                     {
                     BarPercentage = 0.8,
@@ -97,7 +103,7 @@
                     }
                     },
                     YAxes = new List<CartesianAxis>
-                        {
+                {
                         new BarLinearCartesianAxis
                         {
                         Ticks = new LinearCartesianTicks
@@ -131,21 +137,7 @@
             BorderColor = "#ffffff"
         };
     }
-
-    public void GetChooseWhichMonth(ChangeEventArgs e)
-    {
-        RemoveData();
-        Month = Convert.ToInt32(e.Value);
-        SetLastMonth();
-    }
-    public void GetWhichYear(ChangeEventArgs e)
-    {
-        RemoveData();
-        year = Convert.ToInt32(e.Value);
-        SetLastMonth();
-
-    }
-
+    //Welke keuze is gemaakt
     public void GetChoose(ChangeEventArgs e)
     {
         RemoveData();
@@ -153,15 +145,40 @@
         if (Chose == "Year")
         {
             GetFutureYear();
-
+            DisOrVisMonth("Dis");
         }
         else
         {
             SetLastMonth();
+            DisOrVisMonth("Vis");
         }
 
     }
 
+   //of de maand selector zichtbaar moet zijn 
+   async Task DisOrVisMonth(string Subject)
+   {
+        await JsRuntime.InvokeVoidAsync("MonthSelector", Subject);
+   }
+
+    //Pakt de waarde van de maand 
+    public void GetChooseWhichMonth(ChangeEventArgs e)
+    {
+        RemoveData();
+        Month = Convert.ToInt32(e.Value);
+        SetLastMonth();
+    }
+
+    //Zet de waarde neer van de jaar
+    public void GetWhichYear(ChangeEventArgs e)
+    {
+        RemoveData();
+        year = Convert.ToInt32(e.Value);
+        SetLastMonth();
+    }
+
+
+    //Verwijderd de oude waarde in de grafiek
     private async Task RemoveData()
     {
         for (int i = 1; i < 31; i++)
@@ -184,12 +201,13 @@
         }
     }
 
-
+    //refresh de grafiek met nieuw informatie
     private async Task AddData()
     {
         await _barChart.Update();
     }
 
+    //zet de waarde neer van de gekozen maand
     public void SetLastMonth()
     {
 
@@ -199,18 +217,18 @@
             con.QueryEx();
             foreach (DataRow dr in con.QueryEx().Rows)
             {
-                string maand = i.ToString()+",";
+                string maand = i.ToString() + ",";
                 _barDataSetWerkelijk.AddRange(new double[] { Convert.ToDouble(dr[0]) }.Wrap());
             }
         }
         for (int i = 1; i < 31; i++)
         {
             con.SqlQuery("SELECT ROUND((year1.Total1+year2.Total2+year3.Total3+year4.Total4+year5.Total5)/5) FROM (" +
-            " (SELECT COUNT(*) as Total1 FROM `reservation` WHERE `Date`='"+SecondYear+"-" + Month + "-"+i+"') year1," +
-            " (SELECT COUNT(*) as Total2 FROM `reservation` WHERE `Date`='"+LastYear+"-" + Month + "-"+i+"') year2," +
-            "(SELECT COUNT(*) as Total3 FROM `reservation` WHERE `Date` = '"+ThirdYear+"-" + Month + "-"+i+"') year3," +
-            "(SELECT COUNT(*) as Total4 FROM `reservation` WHERE `Date` ='"+FourthYear +"-" + Month + "-"+i+"') year4," +
-            "(SELECT COUNT(*) as Total5 FROM `reservation` WHERE `Date` = '"+FifthYear+"-" + Month+ "-"+i+"') year5)");
+            " (SELECT COUNT(*) as Total1 FROM `reservation` WHERE `Date`='" + SecondYear + "-" + Month + "-" + i + "') year1," +
+            " (SELECT COUNT(*) as Total2 FROM `reservation` WHERE `Date`='" + LastYear + "-" + Month + "-" + i + "') year2," +
+            "(SELECT COUNT(*) as Total3 FROM `reservation` WHERE `Date` = '" + ThirdYear + "-" + Month + "-" + i + "') year3," +
+            "(SELECT COUNT(*) as Total4 FROM `reservation` WHERE `Date` ='" + FourthYear + "-" + Month + "-" + i + "') year4," +
+            "(SELECT COUNT(*) as Total5 FROM `reservation` WHERE `Date` = '" + FifthYear + "-" + Month + "-" + i + "') year5)");
             con.QueryEx();
             foreach (DataRow dr in con.QueryEx().Rows)
             {
@@ -219,18 +237,13 @@
             }
         }
 
-
-
-
-
-        _barChartConfig.Data.Labels.AddRange(new[] {"1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","24","25","26","27","28","29","30","31"});
-        //   _barChartConfig.Data.Labels.AddRange(new [] {1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31});
+        _barChartConfig.Data.Labels.AddRange(new[] { "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "24", "25", "26", "27", "28", "29", "30", "31" });
         _barChartConfig.Data.Datasets.Add(_barDataSetWerkelijk);
 
         AddData();
     }
 
-
+    //Zet de voorspelling van de jaar
     public void GetFutureYear()
     {
         _barChartConfig.Data.Labels.AddRange(new[] { "Jan", "Feb", "Maart", "April", "Mei", "Juni", "Juli", "August", "September", "Oktober", "November", "Decemeber" });
@@ -238,11 +251,11 @@
         for (int i = 1; i < 13; i++)
         {
             con.SqlQuery("SELECT ROUND((year1.Total1+year2.Total2+year3.Total3+year4.Total4+year5.Total5)/5) FROM (" +
-            " (SELECT COUNT(*) as Total1 FROM `reservation` WHERE `Date` BETWEEN '"+SecondYear+"-" + i + "-1' AND '2018-" + i + "-31') year1," +
-            " (SELECT COUNT(*) as Total2 FROM `reservation` WHERE `Date` BETWEEN '"+LastYear+"-" + i + "-1'AND '2019-" + i + "-31') year2," +
-            "(SELECT COUNT(*) as Total3 FROM `reservation` WHERE `Date` BETWEEN '"+ThirdYear+"-" + i + "-1'AND '2017-" + i + "-31') year3," +
-            "(SELECT COUNT(*) as Total4 FROM `reservation` WHERE `Date` BETWEEN '"+FourthYear +"-" + i + "-1'AND '2016-" + i + "-31') year4," +
-            "(SELECT COUNT(*) as Total5 FROM `reservation` WHERE `Date` BETWEEN '"+FifthYear+"-" + i + "-1'AND '2015-" + i + "-31') year5)");
+            " (SELECT COUNT(*) as Total1 FROM `reservation` WHERE `Date` BETWEEN '" + SecondYear + "-" + i + "-1' AND '2018-" + i + "-31') year1," +
+            " (SELECT COUNT(*) as Total2 FROM `reservation` WHERE `Date` BETWEEN '" + LastYear + "-" + i + "-1'AND '2019-" + i + "-31') year2," +
+            "(SELECT COUNT(*) as Total3 FROM `reservation` WHERE `Date` BETWEEN '" + ThirdYear + "-" + i + "-1'AND '2017-" + i + "-31') year3," +
+            "(SELECT COUNT(*) as Total4 FROM `reservation` WHERE `Date` BETWEEN '" + FourthYear + "-" + i + "-1'AND '2016-" + i + "-31') year4," +
+            "(SELECT COUNT(*) as Total5 FROM `reservation` WHERE `Date` BETWEEN '" + FifthYear + "-" + i + "-1'AND '2015-" + i + "-31') year5)");
             con.QueryEx();
             foreach (DataRow dr in con.QueryEx().Rows)
             {
@@ -253,14 +266,13 @@
 
         for (int i = 1; i < 13; i++)
         {
-            con.SqlQuery("SELECT COUNT(*) FROM `reservation` WHERE  `Date` BETWEEN '"+ year +"-" + i + "-1' AND '2020-" + i + "-31'");
+            con.SqlQuery("SELECT COUNT(*) FROM `reservation` WHERE  `Date` BETWEEN '" + year + "-" + i + "-1' AND '2020-" + i + "-31'");
             con.QueryEx();
             foreach (DataRow dr in con.QueryEx().Rows)
             {
-                _barDataSetWerkelijk.AddRange(new double[] { Convert.ToDouble(dr[0])}.Wrap());
+                _barDataSetWerkelijk.AddRange(new double[] { Convert.ToDouble(dr[0]) }.Wrap());
             }
         }
-
         _barChartConfig.Data.Datasets.Add(_barDataVoorspelling);
         _barChartConfig.Data.Datasets.Add(_barDataSetWerkelijk);
         AddData();
