--- a/ReservationAdmin/Component/ReservationCreate.razor
+++ b/ReservationAdmin/Component/ReservationCreate.razor
@@ -57,11 +57,10 @@
         Reserveren
     </button>
 </form>
-<div class="Table-div CHidden">
+<div class="Table-div CHidden ">
     <h4>Tafel kiezen</h4>
     <div style="border-top: 1px solid; padding-bottom: 33px; margin-left: 8%; width: 76%; color: #E6DBDA;" />
-    <div id="NormalDay" class=" table-setting card-group" style=" background-image: url('images/Tafel-van-zes.png');  width:500px; height:450px; margin-left: 103px;
-        margin-bottom: 36px; ">
+    <div id="NormalDay" class="Table-place  table-setting card-group">
 
         <div style=" margin-left:21%; margin-top: 7%;">
 
@@ -86,27 +85,27 @@
             </button>
         </div>
 
-        <div style="padding-left: 50%;height: 7%; margin-top: -3%;">
+        <div style="padding-left: 250px;height: 7%; margin-top: -15px; ">
             <button id="Table6" type="button" @onclick="(e => SelectedTable(6))" style="width: 30px; height: 35px; margin-right:48px;" class="Table TableWitTwo btn btn-primary">6</button>
             <button id="Table5" type="button" @onclick="(e => SelectedTable(5))" style="width: 30px; height: 35px; " class="Table TableWitTwo  btn btn-primary">5</button>
         </div>
 
-        <div style="width: 27%; margin-left: 1%;margin-bottom: 24%;  margin-top: 3%;">
-            <button id="Table8" type="button" @onclick="(e => SelectedTable(8))" style="width: 58px;  height: 48px; margin-left: 25px;  margin-right: 33px;  margin-top: 17%;" class=" Table TableWitFour btn btn-primary">
+        <div style="width: 27%; margin-left: 1%;margin-bottom: 24%;  ">
+            <button id="Table8" type="button" @onclick="(e => SelectedTable(8))" style="width: 58px;  height: 48px; margin-left: 25px;  margin-right: 33px;        margin-top: 38px;" class=" Table TableWitFour btn btn-primary">
                 8
             </button>
-            <button id="Table10" type="button" @onclick="(e => SelectedTable(10))" style="width: 58px;  height: 48px;  margin-left: 25px;  margin-right: 33px;  margin-top: 31%;" class=" Table TableWitFour btn btn-primary">
+            <button id="Table10" type="button" @onclick="(e => SelectedTable(10))" style="width: 58px;  height: 48px;  margin-left: 25px;  margin-right: 33px;      margin-top: 44px;" class=" Table TableWitFour btn btn-primary">
                 10
             </button>
-            <button id="Table11" type="button" @onclick="(e => SelectedTable(11))" style=" width: 90px; height: 48px; margin-left: 25px; margin-right: 33px;   margin-top: 34%;" class="Table TableWitSix  btn btn-primary">
+            <button id="Table11" type="button" @onclick="(e => SelectedTable(11))" style=" width: 90px; height: 48px; margin-left: 25px; margin-right: 33px;   margin-top: 33%;" class="Table TableWitSix  btn btn-primary">
                 11
             </button>
         </div>
         <div style="  width: 19%; margin-left: 1%; ">
-            <button id="Table7" type="button" @onclick="(e => SelectedTable(7))" style="width: 58px;height: 46px; margin-left: 7px;margin-right: 6px; margin-top: 20%;" class="Table TableWitFour btn btn-primary">
+            <button id="Table7" type="button" @onclick="(e => SelectedTable(7))" style="width: 58px;height: 46px; margin-left: 7px;margin-right: 6px; margin-top: 18px;" class="Table TableWitFour btn btn-primary">
                 7
             </button>
-            <button id="Table9" type="button" @onclick="(e => SelectedTable(9))" style=" width: 59px; height: 45px; margin-left: 7px; margin-right: 33px;  margin-top: 55%;" class="Table TableWitFour  btn btn-primary">
+            <button id="Table9" type="button" @onclick="(e => SelectedTable(9))" style=" width: 59px; height: 45px; margin-left: 7px; margin-right: 33px;  margin-top: 56%;" class="Table TableWitFour  btn btn-primary">
                 9
             </button>
         </div>
@@ -185,11 +184,13 @@
 @code{
 
 
-        SqlConnection con = new SqlConnection();
-            public string Message;
+    SqlConnection con = new SqlConnection();
+    public string Message;
     Reservation CreateRes = new Reservation();
     Guest CreateGuest = new Guest();
     public int TableNummerReserved;
+
+
 
     //Check of mail correct is anders stuurt de
     bool IsValidEmail(string email)
@@ -205,9 +206,10 @@
         }
     }
 
+
+    //Als de waarde voor aantal personen veranderd
     void AmountChange(ChangeEventArgs e )
     {
-
         CreateRes.Amount = Convert.ToInt32(e.Value);
         CreateRes.Table = 0;
         CreateRes.Daypart = "";
@@ -228,9 +230,7 @@
         else
         {
             await JsRuntime.InvokeVoidAsync("ResetTables");
-
         }
-
     }
 
     //Kijkt naar welke tafel geblokkeerd moet worden voor het aantal personen
@@ -248,28 +248,21 @@
     //Check welke datum het is voor tafelindeling
     async Task CheckWhichDate()
     {
-
         await JsRuntime.InvokeVoidAsync("WhichDate", CreateRes.date.ToString("yyyy-MM-dd"));
-
     }
 
-      async Task HolDayPart()
+    async Task WholDayPart()
     {
-
         await JsRuntime.InvokeVoidAsync("HoldValue", CreateRes.Daypart);
-
     }
 
 
     //Pak de waarde van geselecteerd tafel
-
     void SelectedTable(int SelectedTable)
     {
         CreateRes.Table = SelectedTable;
         Message = "Tafel Nummer gekozen" + CreateRes.Table.ToString();
         Debug.WriteLine(Message);
-
-
     }
 
     //Pak de waarde van geselecteerd dagdeel
@@ -278,16 +271,14 @@
         if (SelectedDaypart == false)
         {
             CreateRes.Daypart = "Lunch";
-
         }
         else
         {
             CreateRes.Daypart = "Dinner";
-
         }
 
-        HolDayPart();
-        
+        WholDayPart();
+
         if (CreateRes.Amount != 0)
         {
             CheckWhichDate();
@@ -300,7 +291,6 @@
     // Kijkt of de terug of volgende knop is gedrukt
     async Task GetMessage(string subject)
     {
-
         await JsRuntime.InvokeVoidAsync("Message", subject);
     }
 
@@ -332,14 +322,11 @@
         if (CreateGuest.id == 0)
         {
             InsertUser();
-
         }
         else
         {
             InsertReservation();
-
         }
-
     }
 
     //Kijkt of veld wel gevuld of gekozen zijn en verder kan naar volgende form
@@ -370,15 +357,12 @@
     //Zet Nieuwe Gast neer in database
     void InsertUser()
     {
-
-
         con.SqlQuery("INSERT INTO `guest`(`FullName`, `Email`,`NoShow`,`IsBlocked`) VALUES (@Fullname,@Email,0,0)");
         con.Cmd.Parameters.AddWithValue("@Fullname", CreateGuest.FullName);
         con.Cmd.Parameters.AddWithValue("@Email", CreateGuest.Email);
         con.NonQueryEx();
 
         CheckDoubleUser();
-
     }
 
     //Zet Gast neer in database
@@ -398,7 +382,6 @@
             con.Cmd.Parameters.AddWithValue("@Amount", CreateRes.Amount);
             con.NonQueryEx();
         }
-
 
         GetMessage("Succes");
         sendMail();
@@ -482,12 +465,6 @@
         smtpClient.EnableSsl = true;
         smtpClient.Send(mailMessage);
     }
-
-
-
-
-
-
 }
 
 
