--- a/ReservationAdmin/Pages/Agenda.cshtml
+++ b/ReservationAdmin/Pages/Agenda.cshtml
@@ -2,46 +2,48 @@
 @using System.Diagnostics
 @using Microsoft.AspNetCore.Mvc.ModelBinding
 @using ReservationAdmin.Component
-@model PoenkModel
+@model  AgendaModel
 @{
     ViewData["Title"] = "Home page";
 }
-<div style=" float:left; height:100vh;  width: 17%; padding-left: 2%; background-color:#43425D;">
-    <a class="navbar-brand" asp-area="" asp-page="/Index" style="    color: #ffffff;
+    <div style=" float:left; height:100vh;  width: 17%; padding-left: 2%; background-color:#43425D;">
+        <a class="navbar-brand" asp-area="" asp-page="/Index" style="    color: #ffffff;
     font-weight: bold;">Overzicht</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-            aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse ">
-        <ul class="navbar-nav flex-grow-1">
-            <li class="nav-item ">
-                <a class="nav-link   " asp-area="" asp-page="/Index">
-                    <i class="fa fa-bar-chart  IconItem"></i>
-                    Dashboard
-                </a>
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link  " asp-area="" asp-page="/AanmakenReservering">
-                    <i class="fa fa-user  IconItem"></i>
-                    Aanmaken Reservering
-                </a>
-            </li>
-            <li class="nav-item  active navItem">
-                <a class="nav-link " asp-area="" asp-page="/Agenda">
-                    <i class="fa fa-calendar IconItem"></i>
-                    Agenda
-                </a>
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link " asp-area="" asp-page="/Poenk">
-                    <i class="fa fa-cog  IconItem"></i>
-                    Uitloggen
-                </a>
-            </li>
-        </ul>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <form method="post">
+            <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse ">
+                <ul class="navbar-nav flex-grow-1">
+                    <li class="nav-item  ">
+                        <button class="nav-link " type="submit" name="subject" value="Dashboard">
+                            <i class="fa fa-bar-chart  IconItem"></i>
+                            Dashboard
+                        </button>
+                    </li>
+                    <li class="nav-item ">
+                        <button class="nav-link" type="submit" name="subject" value="AanmakenReservering">
+                            <i class="fa fa-user  IconItem"></i>
+                            Aanmaken Reservering
+                        </button>
+                    </li>
+                    <li class="nav-item active ">
+                        <button class="nav-link NavAgenda active" type="submit" name="subject" value="Agenda">
+                            <i class="fa fa-calendar IconItem"></i>
+                            Agenda
+                        </button>
+                    </li>
+                    <li class="nav-item logout">
+                        <button class="nav-link " type="submit" name="subject" value="Index">
+                            <i class="fa fa-cog  IconItem"></i>
+                            Uitloggen
+                        </button>
+                    </li>
+                </ul>
+            </div>
+        </form>
     </div>
-</div>
 
 @(await Html.RenderComponentAsync<SelectReservations>(RenderMode.ServerPrerendered))
 
