--- a/ReservationAdmin/Component/SelectReservations.razor
+++ b/ReservationAdmin/Component/SelectReservations.razor
@@ -130,7 +130,7 @@
                         else if (CreateRes.date >= DateTime.Today || IsConfirmed == "Nee")
                         {
                             <td>
-                                <div styl`we5e="float: left;">
+                                <div style="float: left;">
                                     <button title="Verwijder reservering" @onclick="(e => DeleteReservation(dr[7].ToString()))"  class="BlockButton" style="float: left; background-color: #F0F1F7; border: none; border-radius: 10%; width: 36px; height: 28px;"><i class="fas fa-window-"></i>&#10060;</button>
                                 </div>
                             </td>
